site de viagem utilizando bootstrap 5

--- a/index.html
+++ b/index.html
@@ -5,11 +5,127 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="bootstrap-5/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+    <link href="bootstrap-5/bootstrap.min.css"rel="stylesheet">
+    <link href="css/estilo.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Hello Bootstrap</h1>
-  
+
+    <main class="container">
+        <header class="">
+        <nav class="navbar navbar-light navbar-expand-lg">
+            <a href="#" class="nav-brand">
+                <img src="img/logo-viagem.png">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navegacao-principal" aria-controls="#navegacao-principal" aria-expanded="false" aria-label="Toggle Navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse d-ig-flex justify-content-end" id="navegacao-principal">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                    <a class="nav-link" href="#">VANTAGENS</a>
+                    <a class="nav-link" href="#">DESTINOS</a>
+                </div>
+            </div>
+        </nav>
+        </header>
+
+        <figure class="figure d-block">
+            <img src="img/california1.jpg" class="figure-img img-fluid mx-auto d-block" alt="California">
+        </figure>
+         <div class="row">
+             <div class="col">
+                 <h2>Conheça as Vantagens de viajar com a gente!</h2>
+                 <p> aqui vem um texto de descrição com as vantagens de viajar com a gente</p>
+                 <br>
+             </div>
+            </div>
+            <div class="row">
+                <div class="col text-center">
+                    <i class="bi-trophy fs-2 bg-primary text-dark rounded"></i>
+                </div>
+                <div class="col text-center">
+                    <h4>Roteiro</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                </div>
+                <div class="col text-center">
+                    <i class="bi-twitter fs-2 bg-primary text-white rounded"></i>
+                </div>
+                <div class="col text-center">
+                    <h4>Valores</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                </div>
+                <div class="col text-center">
+                    <i class="bi-trophy fs-2 bg-primary text-dark rounded"></i>
+                </div>
+                <div class="col text-center">
+                    <h4>Conforto</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                </div>
+            </div>
+                <div class="row">
+                    <div class="col text-center">
+                        <i class="bi-twitter fs-2 bg-primary text-white rounded"></i>
+                    </div>
+                    <div class="col text-center">
+                        <h4>Roteiro</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    </div>
+                    <div class="col text-center">
+                        <i class="bi-trophy fs-2 bg-primary text-dark rounded"></i>
+                    </div>
+                    <div class="col text-center">
+                        <h4>Valores</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    </div>
+                    <div class="col text-center">
+                        <i class="bi-twitter fs-2 bg-primary text-white rounded"></i>
+                    </div>
+                    <div class="col text-center">
+                        <h4>Conforto</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    </div>
+                </div>
+                <br>
+         <div class="row">
+             <div class="col text-center">
+                <h3> CONHEÇA NOSSOS DESTINOS </h3>
+                <p>Lorem ipsum dolor sit amet consectetur </p>
+             </div>
+            </div>
+
+            <div class="row">
+                <div class="col text-center">
+                    <img src="img/brasil1.jpg" class="img-fluid img-thumbnail">
+                </div>
+                <div class="col text-center">
+                    <img src="img/brasil2.jpg" class="img-fluid img-thumbnail">
+                </div>
+                <div class="col text-center">
+                    <img src="img/canada1.jpg" class="img-fluid img-thumbnail">
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col text-center">
+                    <img src="img/las-vegas2.jpg" class="img-fluid img-thumbnail">
+                </div>
+                <div class="col text-center">
+                    <img src="img/las-vegas4.jpg" class="img-fluid img-thumbnail">
+                </div>
+                <div class="col text-center">
+                    <img src="img/mexico1.jpg" class="img-fluid img-thumbnail">
+                </div>
+            </div>
+             
+
+            </main>
+            <hr>
+            <footer class="footer bg-dark text-center mb-0 mt-5 pt-4 pb-3">
+                <p class="text-white">Site desenvolvido por João Vitor utilizando Bootstrap 5</p>
+            </footer>
+
   <script src="bootstrap-5/bootstrap.bundle.min.js"></script>
 </body>
 </html>
